# hep-ml-templates

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LIBRARY_IMPROVEMENTS_SUMMARY.md  Makefile  README.md  demo_modularity.py  hep-ml-readme.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cleanup/: cleanup_linting.py
comprehensive_documentation/: BEGINNER_SETUP_REPORT.md  COMPLETE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_TESTING_RESULTS.md  FINAL_VALIDATION_REPORT.md  HIGGS_INTEGRATION_SUMMARY.md  LOCAL_INSTALLATION_GUIDE.md  MASTER_DOCUMENTATION_INDEX.md  MISSION_ACCOMPLISHED_SUMMARY.md  MODEL_SWAPPING_RESULTS.md  OUTPUT_REMOVAL_SUMMARY.md
configs/: demo_pipeline.yaml  pipeline.yaml
configs/data/: csv_demo.yaml  custom_hep_example.yaml  custom_test.yaml  graph_demo.yaml  higgs_uci.yaml  medical_example.yaml  uproot_demo.yaml  wine_quality_example.yaml
configs/evaluation/: classification.yaml  reconstruction.yaml
configs/feature_eng/: all_columns.yaml  column_selector.yaml  custom_test_features.yaml  demo_features.yaml
configs/model/: adaboost.yaml  ae_lightning.yaml  ae_vanilla.yaml  ae_variational.yaml  cnn_hep.yaml  decision_tree.yaml  ensemble_voting.yaml  gnn_gat.yaml  gnn_gcn.yaml  gnn_pyg.yaml  mlp.yaml  random_forest.yaml  svm.yaml  transformer_hep.yaml  xgb_classifier.yaml
configs/preprocessing/: data_split.yaml  onehot_encoder.yaml  standard.yaml
configs/runtime/: local_cpu.yaml
configs/training/: pytorch.yaml  sklearn.yaml
data/: custom_test_data.csv  graph_nodes_demo.csv
docs/: EXTENDED_MODELS_QUICKSTART.md  HEP_MODELS_GUIDE.md
docs/improvements/: EXTRAS_SYSTEM_IMPROVEMENTS.md  LIBRARY_ENHANCEMENTS_SUMMARY.md  SIMULATION_EXPANSION_SUMMARY.md
scripts/: install_all.sh  install_autoencoder.sh  install_decision_tree.sh  install_ensemble.sh  install_gnn.sh  install_neural.sh  install_torch.sh  install_xgb.sh
src/mlpipe/: __init__.py
src/mlpipe/blocks/: __init__.py
src/mlpipe/blocks/evaluation/: __init__.py  classification_metrics.py  reconstruction_metrics.py
src/mlpipe/blocks/feature_eng/: column_selector.py
src/mlpipe/blocks/ingest/: __init__.py  csv_loader.py  graph_csv_loader.py  uproot_loader.py
src/mlpipe/blocks/model/: __init__.py  ae_lightning.py  decision_tree.py  ensemble_models.py  ensemble_models_new.py  ensemble_models_old.py  gnn_pyg.py  hep_neural.py  mlp.py  svm.py  xgb_classifier.py
src/mlpipe/blocks/preprocessing/: __init__.py  data_split.py  onehot_encoder.py  standard_scaler.py
src/mlpipe/blocks/training/: __init__.py  pytorch_trainer.py  sklearn_trainer.py
src/mlpipe/cli/: local_install.py  main.py  manager.py
src/mlpipe/core/: config.py  interfaces.py  local_installer.py  pipeline_generator.py  registry.py  universal_runner.py  utils.py
src/mlpipe/pipelines/xgb_basic/: run.py
tests/: __init__.py  conftest.py  conftests.py  test_basic.py  test_independent_templates.py  test_new_models.py  test_pipelines.py
tests/integration/: test_xgb_basic.py
tests/unit/: test_registry.py
